[gd_scene load_steps=2 format=3 uid="uid://b6x8j6u5y5v6q"]

[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="1_2k4m3"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k4m3")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Population" type="Label" parent="TopBar"]
layout_mode = 2
text = "Population: 1000"
horizontal_alignment = 1

[node name="Satisfaction" type="Label" parent="TopBar"]
layout_mode = 2
text = "Satisfaction: 100%"
horizontal_alignment = 1

[node name="Time" type="Label" parent="TopBar"]
layout_mode = 2
text = "Temps: 0:00"
horizontal_alignment = 1

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="ZoneButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Zone"

[node name="RoadButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Route"

[node name="UpgradeButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Am√©liorer" 